// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feedback test cases: should check render for invalid feedback 1`] = `
<DocumentFragment>
  <span
    class="css-xjluvf"
  >
    Please provide a valid value
  </span>
</DocumentFragment>
`;

exports[`Feedback test cases: should check render for valid feedback 1`] = `
<DocumentFragment>
  <span
    class="css-116yo8b"
  >
    Looks good!
  </span>
</DocumentFragment>
`;
